fix app page bottom overflow bug

--- a/app/assets/stylesheets/api/app.scss
+++ b/app/assets/stylesheets/api/app.scss
@@ -14,16 +14,26 @@
 .app-body {
   width: 100%;
   background-color: #d9e7f5;
-  height: 100vh;
+  min-height: 100vh;
   top: 0;
   bottom: 0;
+  position: relative;
 }
 
 .app-side-bar {
   float: left;
   display: block;
   width: 210px;
-  height: 100vh
+  height: 100%;
+}
+
+.content {
+  position: absolute;
+  top: 32px;;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: hidden;
 }
 
 .app-side-logo {
