--- a/app/assets/stylesheets/api/lists.scss
+++ b/app/assets/stylesheets/api/lists.scss
@@ -49,7 +49,7 @@
 
 .list-show-container {
   float: left;
-  height: 100vh;
+  height: 100%;
   margin-top: 15px;
   width: 40%;
   background-color: #fff;
